# rorschach-discriminate

./: pyproject.toml
rorschach-discriminate/components/discriminate/: receiver.py
rorschach-discriminate/components/evidence/: report.py
