[tool.poetry]
name = "rorschach-scrutinise"
version = "0.1.0"
description = ""
authors = ["Dante Devenir <dantedevenir@outlook.com>"]
readme = "README.md"
packages = [
        {include = "evidence", from = "rorschach-scrutinise/evidence"},
        {include = "models", from = "rorschach-scrutinise/models"},
]

[tool.poetry.dependencies]
python = "3.12.4"
confluent-kafka = "^2.5.3"
pyspark = "^3.5.2"
setuptools = "^74.1.2"
pandas = "^2.2.2"
toml = "^0.10.2"
kafka = "^1.3.5"
kafka-python-ng = "^2.2.2"
pyarrow = "^17.0.0"

[tool.poetry.scripts]
rorschach-scrutinise = "mutation:manhattan"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ipykernel = "^6.29.5"
mypy = "^1.11.1"
types-toml = "^0.10.8"
pandas_stubs = "^2.2.2"
types_requests = "^2.32.0"
pylint = "^3.2.6"

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"